--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,8 +55,17 @@ jobs:
         
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    - name: setup-msbuild
+      uses: microsoft/setup-msbuild@v1.1
+      with:
+        # Folder location of where vswhere.exe is located if a self-hosted agent
+        #vswhere-path: # optional
+        # Version of Visual Studio to search; defaults to latest if not specified
+        #vs-version: # optional
+        # Enable searching for pre-release versions of Visual Studio/MSBuild
+        #vs-prerelease: # optional
+        # The preferred processor architecture of MSBuild. Can be either "x86" or "x64". "x64" is only available from Visual Studio version 17.0 and later.
+        msbuild-architecture: 'x64' # optional, default is x86
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
